<resources>
  <string name="taxi_start_address">你在哪里</string>
  <string name="taxi_end_address">你要去哪</string>
  <string name="taxi_start_address_location">正在获取上车地点</string>
  <string name="taxi_confirm_page_title">确认呼叫</string>
  <string name="taxi_book_time">预约时间</string>
  <string name="taxi_thx_money">调度费</string>
  <string name="taxi_thx_money_format">调度费{%1d}元</string>
  <string name="taxi_by_meter">打表来接</string>
  <string name="taxi_msg">捎话</string>
  <string name="taxi_already_add_msg">已捎话</string>
  <string name="taxi_money_title">选择调度费</string>
  <string name="taxi_call_now_taxi">呼叫出租车</string>
  <string name="taxi_call_booking_taxi">预约出租车</string>
  <string name="taxi_wait_driver_time">%1ds</string>
  <string name="taxi_wait_page_title">等待应答</string>
  <string name="taxi_wait_cancel_order">取消订单</string>
  <string name="taxi_cancel_confirm_msg">确认取消订单吗？</string>
  <string name="taxi_support_dlg_title">提示</string>
  <string name="taxi_have_unfinish_order_message">您有一个未完成的订单，是否前往?</string>
  <string name="taxi_have_unfinish_order_go">前往</string>
  <string name="taxi_have_unfinish_order_no">不</string>
  <string name="taxi_have_trip_click_forward">您有一个未完成的订单，{点击前往}</string>
  <string name="taxi_service_wait_meet">等待接驾</string>
  <string name="taxi_service_driver_arrived">司机已到达</string>
  <string name="taxi_service_driver_tripping">行程开始</string>
  <string name="taxi_service_driver_trip_ending">行程结束</string>
  <string name="taxi_service_title_bar_right_more">更多</string>
  <string name="taxi_service_cancel_order">取消行程</string>
  <string name="taxi_service_emergency_contact">紧急联系人</string>
  <string name="taxi_service_connect_service">联系客服</string>
  <string name="taxi_end_pay_manual_msg">请输入计价器金额</string>
  <string name="taxi_end_pay_options">支付</string>
  <string name="taxi_end_pay_confirm">确认支付%1$s元</string>
  <string name="taxi_end_fee_pay">支付</string>
  <string name="taxi_end_fee_go_pay">去支付</string>
  <string name="taxi_end_fee_unit">元</string>
  <string name="taxi_end_charge_distant">费用疑问?</string>
  <string name="taxi_end_ticket_wipe">发票与报销</string>
  <string name="taxi_end_evaluate_service">评价本次服务</string>
  <string name="taxi_end_fee_voucher">已优惠{%$s}元</string>
  <string name="taxi_tell_driver_pick_up">不能取消啦!已告知司机打表来接</string>
  <string name="taxi_wait_checkbox_i_know">我知道了</string>
  <string name="taxi_service_driver_wait_time">已等待%1$s</string>
  <string name="taxi_end_pay_money">%1$s元</string>
  <string name="ridehailing_init_trip_unfinish_text">你有一个正在进行的行程</string>
  <string name="ridehailing_init_trip_unfinish_text_more">你有多个正在进行的行程</string>
  <string name="ridehailing_init_trip_unfinish_action">查看详情</string>
  <string name="ridehailing_init_trip_unpay_action">去支付</string>
  <string name="ridehailing_init_trip_unpay_text">你有一笔待支付订单，支付后可再次用车</string>
  <string name="ridehailing_search_set">点击去设置</string>
  <string name="rieehailing_search_normal_adr_info">常用地址</string>
  <string name="rieehailing_search_result_info">搜索结果</string>
  <string name="rieehailing_search_history_info">搜索历史</string>
  <string name="ridehailing_init_trip_dialog_locationtoapoint_toofar">上车地点距离目前所在位置较远，是否确认？</string>
  <string name="ridehailing_init_trip_dialog_locationtoapoint_diff_prov">已离开定位城市，点击确定返回当前所在位置</string>
  <string name="ridehailing_init_trip_dialog_locationtoapoint_toofar_sure">确定</string>
  <string name="ridehailing_init_trip_dialog_locationtoapoint_toofar_cancel">取消</string>
  <string name="ridehailing_init_trip_dialog_province">不支持跨省</string>
  <string name="ridehailing_ask_premier_button">呼叫专车</string>
  <string name="ridehailing_ask_taxi_button">呼叫出租车</string>
  <string name="ridehailing_ask_premier_price_about">约%s</string>
  <string name="ridehailing_ask_premier_price_total_msg">折扣已减 %s</string>
  <string name="ridehailing_ask_premier_price_error">价格预估失败，点击重试</string>
  <string name="ridehailing_assign_premier_title">等待司机应答</string>
  <string name="ridehailing_assign_premier_cancel">取消叫车</string>
  <string name="ridehailing_assign_premier_msg">%s 正在为您寻找最近的司机</string>
  <string name="ridehailing_inprogress_end_title">行程结束</string>
  <string name="ridehailing_inprogress_end_unpay">待支付行程</string>
  <string name="ridehailing_inprogress_end_custom">联系客服</string>
  <string name="ridehailing_inprogress_end_cancel">订单已取消</string>
  <string name="ridehailing_inprogress_end_cost">费用详情</string>
  <string name="ridehailing_inprogress_end_evaluate">评价服务</string>
  <string name="ridehailing_inprogress_end_evaluated">您已评价</string>
  <string name="ridehailing_inprogress_end_time_title">时长</string>
  <string name="ridehailing_inprogress_end_mileage_title">里程</string>
  <string name="ridehailing_inprogress_end_type_title">类型</string>
  <string name="ridehailing_inprogress_end_time">%s分钟</string>
  <string name="ridehailing_inprogress_end_mileage">%s公里</string>
  <string name="ridehailing_inprogress_end_cancelpay">订单取消扣款</string>
  <string name="ridehailing_inprogress_result_discount">共优惠%1$s </string>
  <string name="ridehailing_inprogress_end_unpaid_button">支付</string>
  <string name="ridehailing_inprogress_end_paychannel_wallet">钱包余额已支付</string>
  <string name="ridehailing_inprogress_end_paychannel_wx">微信已支付</string>
  <string name="ridehailing_inprogress_end_paychannel_redpackage">红包已支付</string>
  <string name="ridehailing_inprogress_end_paychannel_alipay">支付宝已支付</string>
  <string name="ridehailing_inprogress_end_pay_title">支付车费</string>
  <string name="ridehailing_inprogress_paying">正在支付车费…</string>
  <string name="ridehailing_inprogress_arriving_titile">司机已到达</string>
  <string name="ridehailing_inprogress_arriving_msg">车辆已到达，将于 %s 开始计费</string>
  <string name="ridehailing_inprogress_arriving_map_wait">距离您出发还有 %s 分</string>
  <string name="ridehailing_inprogress_setout_titile">等待司机到达</string>
  <string name="ridehailing_inprogress_setout_map_wait">司机距您 %1$s 公里，预计 %2$s 分钟到达</string>
  <string name="ridehailing_inprogress_setout_msg">司机已出发，请耐心等待</string>
  <string name="ridehailing_inprogress_accepted_titile">等待司机出发</string>
  <string name="ridehailing_inprogress_accepted_msg">车辆预约成功，%s为你服务</string>
  <string name="ridehailing_inprogress_map_early">%s 请在倒计时结束前上车</string>
  <string name="ridehailing_inprogress_map_later">您已迟到 %s，请尽快上车</string>
  <string name="ridehailing_inprogress_map_ready">司机已等待您 %s</string>
  <string name="ridehailing_inprogress_start_titile">开始行程</string>
  <string name="ridehailing_inprogress_dialog_cancel_order_with_money_msg">司机已到达上车位置，现在取消订单将收取违约金 %s，确定取消？</string>
  <string name="ridehailing_inprogress_dialog_cancel_order_title">取消订单</string>
  <string name="ridehailing_inprogress_dialog_cancel_order_near_msg">已经是距离您最近的司机了，确认取消本次行程？</string>
  <string name="ridehailing_inprogress_dialog_cancel_order_assign_msg">再多等一会儿可能就有司机接单了，确定取消？</string>
  <string name="ridehailing_inprogress_dialog_cancel_order_wait_button">继续等待</string>
  <string name="ridehailing_inprogress_dialog_cancel_order_left_button">不取消</string>
  <string name="ridehailing_inprogress_dialog_cancel_order_right_button">确定取消</string>
  <string name="ridehailing_net_error">系统开小差，等一会儿再试吧</string>
  <string name="ridehailing_ask_free_text">需要开通微信免密支付才能继续使用专车服务</string>
  <string name="ridehailing_ask_free_sure">开通微信免密</string>
  <string name="ridehailing_ask_free_cancel">取消</string>
  <string name="pay_wx_getpay_failed">请求失败</string>
  <string name="pay_wx_not_installed">您没有安装微信，请选择其他支付方式</string>
  <string name="pay_wx_version_not_supported">您的微信版本过低，请选择其他支付方式</string>
  <string name="pay_wx_start_failed">系统错误，请返回重试</string>
  <string name="pay_mothed_not_surport">暂不支持此种支付方式</string>
  <string name="pay_success">支付成功</string>
  <string name="pay_cancel">支付取消</string>
  <string name="refund_have_trip_inprogress">有订单未完成，请完成订单再进行退款操作。</string>
  <string name="refund_have_trip_unpaid">有订单未支付，请支付订单再进行退款操作。</string>
  <string name="refund_have_trip_inprogress_btn">确定</string>
  <string name="refund_have_trip_unpaid_btn">去支付</string>
  <string name="carpool_index_time">出发时间</string>
  <string name="carpool_index_thx_money">感谢费</string>
  <string name="carpool_index_people_count">乘车人数</string>
  <string name="carpool_index_booking">确认预约</string>
  <string name="carpool_index_booking_estimate_error">预约失败，点击重试</string>
  <string name="carpool_index_booking_time_error">已经超过预约时间，请重新选择出行时间</string>
  <string name="carpool_index_booking_people_error">同行人数过多，无法选择 1+1 拼车</string>
  <string name="carpool_index_booking_a_notnull">请选择起点信息</string>
  <string name="carpool_index_booking_b_notnull">请选择终点信息</string>
  <string name="carpool_index_detail">查看详情</string>
  <string name="carpool_index_estimate_price">约 %s</string>
  <string name="carpool_index_init_only">独享价 %s</string>
  <string name="carpool_index_init_only_pool">未拼成按独享价 %s计费</string>
  <string name="carpool_index_init_discount_coupon">劵已抵扣 %s</string>
  <string name="carpool_index_init_cancel_success">取消成功</string>
  <string name="carpool_sure">确认</string>
  <string name="carpool_cancel">取消</string>
  <string name="carpool_sure_1">确定</string>
  <string name="carpool_sex_layout_button_girl">保存并预约</string>
  <string name="carpool_sex_layout_button_boy">保存并预约</string>
  <string name="carpool_sex_layout_title">首次使用请选择性别</string>
  <string name="carpool_sex_layout_msg">以便我们为你匹配合适顺路的车主～\n选择后不可更改</string>
  <string name="carpool_index_checkbox_text">拼车1 + 1，成功享折扣</string>
  <string name="carpool_bottomsheet_money">选择感谢费</string>
  <string name="carpool_bottomsheet_money_other">其他金额</string>
  <string name="carpool_bottomsheet_money_hide">0-95</string>
  <string name="carpool_bottomsheet_people">%s人</string>
  <string name="carpool_index_wait_pool_tag">1+1 拼车</string>
  <string name="carpool_index_wait_pool_thx_msg">增加感谢费可以更快接单</string>
  <string name="carpool_index_wait_pool_money_pool">%1$s, 拼成价 %2$s</string>
  <string name="carpool_index_wait_pool_loading_msg">正在通知顺路车主接单</string>
  <string name="carpool_index_wait_cancel_dialog_msg">已为你通知多位车主，车主多是热心的上班族，多等一会儿吧</string>
  <string name="carpool_index_triping_title">正在进行的订单</string>
  <string name="carpool_index_triping_start">车主已接单,待出发</string>
  <string name="carpool_index_triping_triping">司机已出发，%s 开始行程</string>
  <string name="carpool_index_triping_needconfirm">等待车主送到</string>
  <string name="carpool_detail_triping_pool">已有乘客加入行程</string>
  <string name="carpool_detail_prepay_text">预付车费 %s</string>
  <string name="carpool_detail_arrive_text">等待送达</string>
  <string name="carpool_detail_arrive_text_button">确认送达</string>
  <string name="carpool_detail_ask_text">预约行程</string>
  <string name="carpool_detail_assign_text">等待司机接单</string>
  <string name="carpool_detail_pool_msg"> 若拼车成功支付 %1$s，行程结束后返现 %2$s</string>
  <string name="carpool_detail_pool_msg_no_coupon"> 若拼车成功，结束后返现 %1$s</string>
  <string name="carpool_detail_pool_msg_coupon_not_join"> 券已减 %1$s</string>
  <string name="carpool_detail_pool_msg_coupon"> 券已减 %1$s，若拼车成功，结束后返现 %2$s</string>
  <string name="carpool_detail_arrive_msg"> 请您到达目的地后再点击确认到达</string>
  <string name="carpool_detail_pooling"> 正在为你寻找 1+1 拼友...</string>
  <string name="carpool_detail_pooling_success"> 已有乘客加入行程</string>
  <string name="carpool_detail_title">等待送达</string>
  <string name="carpool_paypage_unpay_btn">去支付</string>
  <string name="carpool_resultpage_header_wait_pool">待拼友完成行程，平台将返款%s至你的钱包。请您留意</string>
  <string name="carpool_resultpage_header_sure_pool">拼车已成功，平台已返款 %s至你的钱包</string>
  <string name="carpool_resultpage_msg_only">未拼成，本次行程为独享价</string>
  <string name="carpool_resultpage_cancel_payed">退款将退回到您发起支付的账户中，请您留意</string>
  <string name="carpool_resultpage_cancel_title_bydiver">订单被司机取消</string>
  <string name="carpool_resultpage_cancel_msg_bydiver">司机无法完成行程，试试重新预约吧</string>
  <string name="carpool_canceled_order_prompt">%s的行程已被司机取消，试试重新预约吧</string>
  <string name="carpool_canceled_order_cancel_system">你的订单没有车主响应，系统已帮您自动取消订单</string>
  <string name="carpool_canceled_order_confirm">知道了</string>
  <string name="time_select_hour">%d 时</string>
</resources>