<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:clickable="true"
  android:clipChildren="false"
  android:orientation="vertical"
  android:transitionName="searchView">

  <include layout="@layout/taxi_extra_info_layout"/>

  <TextView
    android:id="@+id/taxi_start_address"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:paddingLeft="10dp"
    android:background="@drawable/taxi_adr_selector"
    android:drawableLeft="@drawable/one_trip_start_address_point"
    android:drawablePadding="10dp"
    android:text="@string/taxi_start_address_location"
    android:gravity="center_vertical"
    android:hint="@string/taxi_start_address"
    android:textColor="#191d21"
    android:textSize="14sp"/>

  <View
    android:layout_width="match_parent"
    android:layout_height="0.5dp"
    android:layout_marginLeft="26dp"
    android:background="#f3f3f3"/>

  <TextView
    android:id="@+id/taxi_end_address"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:paddingLeft="10dp"
    android:background="@drawable/taxi_adr_selector"
    android:drawableLeft="@drawable/one_trip_end_address_point"
    android:drawablePadding="10dp"
    android:gravity="center_vertical"
    android:hint="@string/taxi_end_address"
    android:textColor="#191d21"
    android:textSize="14sp"/>
</LinearLayout>
