<com.trip.taxi.widget.BaseRelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/estimate_price_layout"
  android:layout_width="match_parent"
  android:layout_height="100dp"
  android:background="#FFFFFF"
  android:visibility="visible">

  <LinearLayout
    android:id="@+id/ridehailing_asking_retry"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:clickable="true"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="gone">

    <ImageView
      android:id="@+id/estimate_price_fail"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:src="@drawable/taxi_estimate_price_fail"/>

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="9dp"
      android:gravity="center_horizontal"
      android:text="@string/ridehailing_ask_premier_price_error"
      android:textColor="#999ba1"
      android:textSize="12sp"/>

  </LinearLayout>

  <com.one.framework.app.widget.LoadingView
    android:id="@+id/taxi_estimate_price_loading"
    android:layout_width="match_parent"
    android:layout_height="match_parent"/>

  <LinearLayout
    android:id="@+id/ridehailing_asking_price_money_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="gone">

    <TextView
      android:id="@+id/ridehailing_asking_price_txt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:text="@string/ridehailing_ask_premier_price_about"
      android:textColor="#191d21"
      android:textSize="19sp"/>
  
    <TextView
      android:id="@+id/ridehailing_ask_premier_price_total"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:drawablePadding="4dp"
      android:text="@string/ridehailing_ask_premier_price_total_msg"
      android:textColor="#999ba1"
      android:textSize="12sp"
      android:visibility="gone"/>
    
    <TextView
      android:id="@+id/ridehailing_carpool_index_price_discount"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="2dp"
      android:layout_gravity="center_horizontal"
      android:drawableLeft="@drawable/taxi_estimate_price_discount"
      android:drawablePadding="4dp"
      android:textColor="#999ba1"
      android:textSize="12sp"
      android:visibility="gone"/>
  </LinearLayout>

</com.trip.taxi.widget.BaseRelativeLayout>