<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/taxi_end_trip_finish_pay_layout"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_gravity="bottom"
  android:background="@android:color/white"
  android:clickable="true"
  android:orientation="vertical"
  android:visibility="gone">

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp">
    <TextView
      android:id="@+id/taxi_end_trip_total_fee_info"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="合计费用"
      android:textSize="14sp"
      android:layout_alignParentLeft="true"/>

    <TextView
      android:id="@+id/taxi_end_trip_total_fee"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="14sp"
      android:layout_alignParentRight="true"/>
  </RelativeLayout>

  <LinearLayout
    android:id="@+id/taxi_end_trip_pay_extra_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:orientation="vertical"/>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="3dp"
      android:layout_gravity="center_horizontal"
      android:gravity="center_horizontal"
      android:orientation="horizontal">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:gravity="center_horizontal"
        android:text="@string/taxi_end_fee_pay"
        android:textSize="10sp"/>

      <TextView
        android:id="@+id/taxi_end_pay_trip_fee"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:includeFontPadding="false"
        android:text="15.4"
        android:textColor="#333333"
        android:textSize="24sp"/>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:gravity="center_horizontal"
        android:text="@string/taxi_end_fee_unit"
        android:textSize="10sp"/>
    </LinearLayout>

    <LinearLayout
      android:id="@+id/taxi_end_trip_charge_distant_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:clickable="true"
      android:gravity="center_horizontal"
      android:orientation="horizontal">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taxi_end_charge_distant"
        android:textSize="10sp"/>

      <ImageView
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_gravity="center_vertical"
        android:src="@drawable/pay_fee_detail_arrow"/>
    </LinearLayout>
  </LinearLayout>

  <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="50dp">
    <com.one.framework.app.widget.TripButton
      android:id="@+id/taxi_end_go_pay"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:disable_color="@android:color/white"
      app:enable_color="#343d4a"
      app:radius="0dp"
      app:text="@string/taxi_end_fee_go_pay"
      app:text_color="@android:color/white"/>

    <com.one.framework.app.widget.LoadingView
      android:id="@+id/taxi_end_pay_loading_view"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:visibility="gone"
      app:loading_point_color="#ffffff"
      app:loading_point_count="3"
      app:loading_point_normal_size="3dp"
      app:loading_point_selector_size="4dp"
      app:loading_type="point"/>
  </FrameLayout>

</LinearLayout>