<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/taxi_full_form_options_layout"
  android:layout_width="match_parent"
  android:layout_height="51dp"
  android:orientation="horizontal">

  <LinearLayout
    android:id="@+id/taxi_full_form_tip_layout"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:layout_gravity="center"
    android:background="@drawable/taxi_adr_selector"
    android:clickable="true"
    android:gravity="center"
    android:orientation="horizontal">

    <ImageView
      android:layout_width="12dp"
      android:layout_height="12dp"
      android:layout_marginRight="5dp"
      android:layout_gravity="center"
      android:src="@drawable/taxi_full_thank_tip"/>

    <TextView
      android:id="@+id/taxi_full_form_tip"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_gravity="center"
      android:gravity="center"
      android:text="@string/taxi_thx_money"
      android:textColor="#585c64"
      android:textSize="12sp"/>
  </LinearLayout>

  <View
    android:layout_width="0.5dp"
    android:layout_height="20dp"
    android:layout_gravity="center_vertical"
    android:background="#f3f3f3"/>

  <LinearLayout
    android:id="@+id/taxi_full_form_checkbox_layout"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="horizontal"
    android:visibility="gone">

    <CheckBox
      android:id="@+id/taxi_full_form_checkbox"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_gravity="center"
      android:paddingLeft="5dp"
      android:button="@drawable/taxi_checkbox_selector"
      android:text="@string/taxi_by_meter"
      android:textColor="#585c64"
      android:textSize="12sp"/>

  </LinearLayout>

  <View
    android:layout_width="0.5dp"
    android:layout_height="20dp"
    android:layout_gravity="center_vertical"
    android:background="#f3f3f3"/>

  <LinearLayout
    android:id="@+id/taxi_full_form_mark_layout"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@drawable/taxi_adr_selector"
    android:clickable="true"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:drawableLeft="@drawable/taxi_trip_booking_mask"
      android:drawablePadding="5dp"
      android:text="@string/taxi_msg"
      android:textColor="#585c64"
      android:textSize="12sp"/>

    <TextView
      android:id="@+id/taxi_full_form_mark"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="2dp"
      android:layout_marginLeft="5dp"
      android:layout_marginRight="5dp"
      android:layout_gravity="center"
      android:ellipsize="end"
      android:gravity="center_horizontal"
      android:maxLines="1"
      android:textColor="#bbc2c5"
      android:textSize="10sp"
      android:visibility="gone"/>
  </LinearLayout>

</LinearLayout>
